working sticky-kit homepage build

--- a/index.html
+++ b/index.html
@@ -40,19 +40,39 @@
           </div>
         </div>
         <div class="work-section-content">
-          <div class="work-item1"></div>
-          <div class="work-item2"></div>
-          <div class="work-item3"></div>
-          <div class="work-item1"></div>
+          <div class="work-item1">
+            <a  class="work-item-link" href="#">
+              <div>
+                <h2>project one</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work-item2">
+            <a  class="work-item-link" href="#">
+              <div>
+                <h2>project two</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work-item3">
+            <a  class="work-item-link" href="#">
+              <div>
+                <h2>project three</h2>
+              </div>
+            </a>
+          </div>
+          <div class="work-item1">
+            <a  class="work-item-link" href="#">
+              <div>
+                <h2>project four</h2>
+              </div>
+            </a>
+          </div>
           <div class="see-all-work">
             <a href="#">See all projects</a>
           </div>
         </div>
         <div class="clear"></div>
-        <!-- contact -->
-        <!-- <div class="sidebar contact-section-title"></div>
-        <div class="contact-section-content"></div>
-        <div class="clear"></div> -->
       </div><!-- end of work-content -->
 
       <!-- about -->
