--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
   <script src="js/sticky-kit.min.js"></script>
   <link rel="stylesheet" href="styles/main.css" media="screen" title="no title">
 </head>
-  <body>
+  <body  data-spy="scroll" data-target=".my-navbar" data-offset="50">
     <div class="main">
       <!-- home-landing page area -->
-      <div class="main__home-landing container-fluid">
+      <div class="main__home-landing container-fluid" >
         <h1 class="main__home-landing__subtitle">design development</h1>
-        <img class="main__home-landing__logo" src="http://placehold.it/400x400" alt="">
+        <img class="main__home-landing__logo"  id="homesection" src="http://placehold.it/400x400" alt="">
         <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="500">
-          <ul class="nav navbar-nav my-navbar-wrapper__nav ">
-            <li class="active my-navbar-wrapper__nav--list"><a href="#">home</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="#">work</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="#">about</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="#">contact</a></li>
+          <ul class="nav navbar-nav my-navbar-wrapper__nav " id="navbar-target">
+            <li class="active my-navbar-wrapper__nav--list"><a href="#homesection">home</a></li>
+            <li class="my-navbar-wrapper__nav--list"><a href="#worksection">work</a></li>
+            <li class="my-navbar-wrapper__nav--list"><a href="#aboutsection">about</a></li>
+            <li class="my-navbar-wrapper__nav--list"><a href="#contactsection">contact</a></li>
           </ul>
         </nav>
       </div>
     </div>
 
 
-    <div class="content-wrapper">
-      <div class="work-content">
+    <div class="content-wrapper" >
+      <div class="work-content transition-width" id="worksection">
         <!-- work -->
-        <div class="sidebar work-section-title">
+        <div class="sidebar work-section-title" >
           <div class="section-title">
             <span>Work<br>
             <a href="#">see all</a>
             </span>
           </div>
         </div>
-        <div class="work-section-content">
-          <div class="work-item1">
-            <a  class="work-item-link" href="#">
+        <div class="work-section-content ">
+          <div class="work-item1 ">
+            <a  class="work-item-link" ref="#">
               <div>
                 <h2>project one</h2>
               </div>
@@ -76,7 +76,7 @@
       </div><!-- end of work-content -->
 
       <!-- about -->
-      <div class="about-content">
+      <div class="about-content" id="aboutsection">
         <div class="sidebar about-section-title">
           <div class="section-title">
             <span>About</span>
@@ -103,7 +103,7 @@
       </div><!-- end of about-content  -->
 
       <!-- contact -->
-      <div class="contact-content">
+      <div class="contact-content" id="contactsection">
         <div class="sidebar contact-section-title">
           <div class="section-title">
             <span>Contact</span>
@@ -131,8 +131,33 @@
 
   </body>
   <script>
+    //sticky-kit
     $(".sidebar").stick_in_parent({
       offset_top: 0
     });
+
+    //scrollspy
+    $(document).ready(function(){
+
+      // Add smooth scrolling on all links inside the navbar
+      $("#navbar-target a").on('click', function(event) {
+        // Prevent default anchor click behavior
+        event.preventDefault();
+
+        // Store hash
+        var hash = this.hash;
+
+        // Using jQuery's animate() method to add smooth page scroll
+        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+        $('html, body').animate({
+          scrollTop: $(hash).offset().top - 60
+        }, 800, function(){
+
+          // Add hash (#) to URL when done scrolling (default click behavior)
+          window.location.hash = hash;
+        });
+      });
+    });
+
   </script>
 </html>
