all-projects.html: working filter and mixitup plugin

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <!-- work -->
         <div class="sidebar work-section-title" >
           <div class="section-title">
-            <span>Work<br>
-            <a href="#">see all</a>
+            <span>Work<br><br>
+            <a href="all-projects.html">see all</a>
             </span>
           </div>
         </div>
@@ -69,7 +69,7 @@
             </a>
           </div>
           <div class="see-all-work">
-            <a href="#">See all projects</a>
+            <a href="all-projects.html">See all projects</a>
           </div>
         </div>
         <div class="clear"></div>
