--- a/all-projects.html
+++ b/all-projects.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/sticky-kit.min.js"></script>
+  <script src="js/jquery.mixitup.js"></script>
   <link rel="stylesheet" href="styles/all-projects.css" media="screen" title="no title">
 </head>
   <body>
@@ -16,26 +17,150 @@
       <!-- home-landing page area -->
       <div class="main__home-landing container-fluid">
         <img class="main__home-landing__logo" src="http://placehold.it/100x100" alt="">
-        <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="500">
+        <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="120">
           <ul class="nav navbar-nav my-navbar-wrapper__nav ">
-            <li class="active my-navbar-wrapper__nav--list"><a href="#">home</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="#">work</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="#">about</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a href="#">contact</a></li>
+            <li class="active my-navbar-wrapper__nav--list"><a href="index.html">home</a></li>
+            <li class="my-navbar-wrapper__nav--list"><a href="index.html#worksection">work</a></li>
+            <li class="my-navbar-wrapper__nav--list"><a href="index.html#aboutsection">about</a></li>
+            <li class="my-navbar-wrapper__nav--list"><a href="index.html#contactsection">contact</a></li>
           </ul>
         </nav>
       </div><!-- end of home-landing -->
     </div><!-- end of main -->
 
-    <div class="filters">
+    <!-- filter-wrapper -->
+    <div class="filter-wrapper container-fluid">
+      <nav class="navbar">
+        <ul class="nav navbar-nav filter-nav" id="filter">
+          <li class="filter current" data-filter="all"><a href="#">All</a></li>
+          <li class="filter" data-filter=".category-web"><a href="#">Web</a></li>
+          <li class="filter" data-filter=".category-des"><a href="#">Design</a></li>
+          <li class="filter" data-filter=".category-pho"><a href="#">Photography</a></li>
+          <li class="filter" data-filter=".category-mot"><a href="#">Motion</a></li>
+          <li class="filter" data-filter=".category-ill"><a href="#">Illustration</a></li>
+        </ul>
+      </nav>
+    </div><!-- end of filter-wrapper -->
+
+    <div class="portfolio-container" id="container">
+      <div class="mix category-web project-box">
+        <div class="project-image1">
+          <a  class="see-project" href="#">
+            <div>
+              <h2>see project</h2>
+            </div>
+          </a>
+        </div>
+        <div class="box-caption">
+          <h5>project tite</h5>
+          <h6>company</h6>
+          <h6>year</h6>
+        </div>
+      </div>
+      <div class="mix category-ill project-box">
+        <div class="project-image2">
+          <a  class="see-project" href="#">
+            <div>
+              <h2>see project</h2>
+            </div>
+          </a>
+        </div>
+        <div class="box-caption">
+          <h5>project tite</h5>
+          <h6>company</h6>
+          <h6>year</h6>
+        </div>
+      </div>
+      <div class="mix category-pho project-box">
+        <div class="project-image3">
+          <a  class="see-project" href="#">
+            <div>
+              <h2>see project</h2>
+            </div>
+          </a>
+        </div>
+        <div class="box-caption">
+          <h5>project tite</h5>
+          <h6>company</h6>
+          <h6>year</h6>
+        </div>
+      </div>
+      <div class="mix category-web project-box">
+        <div class="project-image2">
+          <a  class="see-project" href="#">
+            <div>
+              <h2>see project</h2>
+            </div>
+          </a>
+        </div>
+        <div class="box-caption">
+          <h5>project tite</h5>
+          <h6>company</h6>
+          <h6>year</h6>
+        </div>
+      </div>
+      <div class="mix category-web project-box">
+        <div class="project-image2">
+          <a  class="see-project" href="#">
+            <div>
+              <h2>see project</h2>
+            </div>
+          </a>
+        </div>
+        <div class="box-caption">
+          <h5>project tite</h5>
+          <h6>company</h6>
+          <h6>year</h6>
+        </div>
+      </div>
+      <div class="mix category-mot project-box">
+        <div class="project-image2">
+          <a  class="see-project" href="#">
+            <div>
+              <h2>see project</h2>
+            </div>
+          </a>
+        </div>
+        <div class="box-caption">
+          <h5>project tite</h5>
+          <h6>company</h6>
+          <h6>year</h6>
+        </div>
+      </div>
+      <div class="mix category-des project-box">
+        <div class="project-image2">
+          <a  class="see-project" href="#">
+            <div>
+              <h2>see project</h2>
+            </div>
+          </a>
+        </div>
+        <div class="box-caption">
+          <h5>project tite</h5>
+          <h6>company</h6>
+          <h6>year</h6>
+        </div>
+      </div>
 
 
-    </div>
+      <div class="gap"></div>
+      <div class="gap"></div>
+    </div><!-- end of portfolio-container -->
 
-    <div class="project-list">
+    <script>
+    $(function() {
+      $('#container').mixItUp();
+    });
 
-    </div>
-
+    $(document).ready(function() {
+      $('.filter-nav li a').click(function() {
+        $(this).css('outline','none');
+          $('.filter-nav .current').removeClass('current');
+          $(this).parent().addClass('current')
+          // return false;
+        });
+      });
+    </script>
 
 
   </body>
