--- a/all-projects.html
+++ b/all-projects.html
@@ -43,19 +43,21 @@
     </div><!-- end of filter-wrapper -->
 
     <div class="portfolio-container" id="container">
+
       <div class="mix category-web project-box">
-        <div class="project-image1">
+        <div class="project-image project-image1">
           <a  class="see-project" href="#">
-            <div>
-              <h2>see project</h2>
+            <div class="color-box"></div>
+            <div class="text-box">
+              <p>see project</p>
             </div>
           </a>
         </div>
-        <div class="box-caption">
+        <!-- <div class="box-caption">
           <h5>project tite</h5>
           <h6>company</h6>
           <h6>year</h6>
-        </div>
+        </div> -->
       </div>
       <div class="mix category-ill project-box">
         <div class="project-image2">
@@ -165,3 +167,14 @@
 
   </body>
 </html>
+
+
+<!-- <div class="hovereffect">
+  <div class="img-responsive project-image project-image1"></div>
+      <div class="overlay">
+        <h2>Effect 13</h2>
+        <p>
+          <a href="#">LINK HERE</a>
+        </p>
+      </div>
+</div> -->
