all-projects.html: changed hoverstyle for all images

--- a/all-projects.html
+++ b/all-projects.html
@@ -53,94 +53,65 @@
             </div>
           </a>
         </div>
-        <!-- <div class="box-caption">
-          <h5>project tite</h5>
-          <h6>company</h6>
-          <h6>year</h6>
-        </div> -->
       </div>
       <div class="mix category-ill project-box">
-        <div class="project-image2">
+        <div class="project-image project-image2">
           <a  class="see-project" href="#">
-            <div>
-              <h2>see project</h2>
+            <div class="color-box"></div>
+            <div class="text-box">
+              <p>see project</p>
             </div>
           </a>
-        </div>
-        <div class="box-caption">
-          <h5>project tite</h5>
-          <h6>company</h6>
-          <h6>year</h6>
         </div>
       </div>
       <div class="mix category-pho project-box">
-        <div class="project-image3">
+        <div class="project-image project-image3">
           <a  class="see-project" href="#">
-            <div>
-              <h2>see project</h2>
+            <div class="color-box"></div>
+            <div class="text-box">
+              <p>see project</p>
             </div>
           </a>
-        </div>
-        <div class="box-caption">
-          <h5>project tite</h5>
-          <h6>company</h6>
-          <h6>year</h6>
         </div>
       </div>
       <div class="mix category-web project-box">
-        <div class="project-image2">
+        <div class="project-image project-image1">
           <a  class="see-project" href="#">
-            <div>
-              <h2>see project</h2>
+            <div class="color-box"></div>
+            <div class="text-box">
+              <p>see project</p>
             </div>
           </a>
-        </div>
-        <div class="box-caption">
-          <h5>project tite</h5>
-          <h6>company</h6>
-          <h6>year</h6>
         </div>
       </div>
       <div class="mix category-web project-box">
-        <div class="project-image2">
+        <div class="project-image project-image2">
           <a  class="see-project" href="#">
-            <div>
-              <h2>see project</h2>
+            <div class="color-box"></div>
+            <div class="text-box">
+              <p>see project</p>
             </div>
           </a>
-        </div>
-        <div class="box-caption">
-          <h5>project tite</h5>
-          <h6>company</h6>
-          <h6>year</h6>
         </div>
       </div>
       <div class="mix category-mot project-box">
-        <div class="project-image2">
+        <div class="project-image project-image3">
           <a  class="see-project" href="#">
-            <div>
-              <h2>see project</h2>
+            <div class="color-box"></div>
+            <div class="text-box">
+              <p>see project</p>
             </div>
           </a>
-        </div>
-        <div class="box-caption">
-          <h5>project tite</h5>
-          <h6>company</h6>
-          <h6>year</h6>
         </div>
       </div>
       <div class="mix category-des project-box">
-        <div class="project-image2">
+        <div class="project-image project-image3">
           <a  class="see-project" href="#">
-            <div>
-              <h2>see project</h2>
+            <div class="color-box"></div>
+            <div class="text-box">
+              <p>see project</p>
             </div>
           </a>
-        </div>
-        <div class="box-caption">
-          <h5>project tite</h5>
-          <h6>company</h6>
-          <h6>year</h6>
         </div>
       </div>
 
