homepage: changed the hover effect on one project image to test

--- a/all-projects.html
+++ b/all-projects.html
@@ -46,7 +46,7 @@
 
       <div class="mix category-web project-box">
         <div class="project-image project-image1">
-          <a  class="see-project" href="#">
+          <a  class="see-project" href="projects/project1.html">
             <div class="color-box"></div>
             <div class="text-box">
               <p>see project</p>
