--- a/index.html
+++ b/index.html
@@ -40,13 +40,23 @@
           </div>
         </div>
         <div class="work-section-content ">
-          <div class="work-item1 ">
+          <div class="work-item1">
+            <a  class="see-project" href="projects/project1.html">
+              <div class="color-box"></div>
+              <div class="text-box">
+                <h4>project title</h4>
+                <p>project detail</p><br>
+                <p>see project</p>
+              </div>
+            </a>
+          </div>
+          <!-- <div class="work-item1 ">
             <a  class="work-item-link" ref="#">
               <div>
                 <h2>project one</h2>
               </div>
             </a>
-          </div>
+          </div> -->
           <div class="work-item2">
             <a  class="work-item-link" href="#">
               <div>
