homepage: changed hover effect for all 4 project images

--- a/index.html
+++ b/index.html
@@ -50,31 +50,33 @@
               </div>
             </a>
           </div>
-          <!-- <div class="work-item1 ">
-            <a  class="work-item-link" ref="#">
-              <div>
-                <h2>project one</h2>
-              </div>
-            </a>
-          </div> -->
           <div class="work-item2">
-            <a  class="work-item-link" href="#">
-              <div>
-                <h2>project two</h2>
+            <a  class="see-project" href="projects/project2.html">
+              <div class="color-box"></div>
+              <div class="text-box">
+                <h4>project title</h4>
+                <p>project detail</p><br>
+                <p>see project</p>
               </div>
             </a>
           </div>
           <div class="work-item3">
-            <a  class="work-item-link" href="#">
-              <div>
-                <h2>project three</h2>
+            <a  class="see-project" href="projects/project3.html">
+              <div class="color-box"></div>
+              <div class="text-box">
+                <h4>project title</h4>
+                <p>project detail</p><br>
+                <p>see project</p>
               </div>
             </a>
           </div>
           <div class="work-item1">
-            <a  class="work-item-link" href="#">
-              <div>
-                <h2>project four</h2>
+            <a  class="see-project" href="projects/project4.html">
+              <div class="color-box"></div>
+              <div class="text-box">
+                <h4>project title</h4>
+                <p>project detail</p><br>
+                <p>see project</p>
               </div>
             </a>
           </div>
