--- a/projects/project1.html
+++ b/projects/project1.html
@@ -39,7 +39,7 @@
         <div class="row">
 
           <div class="col-md-3 scrollspy">
-            <ul id="Sidenav" class="nav hidden-xs hidden-sm" data-spy="affix">
+            <ul id="Sidenav" class="nav hidden-xs hidden-sm" data-spy="affix" data-offset-top="2000">
               <li><a href="#web-design">Web Design</a></li>
               <li><a href="#web-development">Web Development</a>
                 <ul class="mini-nav">
@@ -64,7 +64,7 @@
             </ul>
           </div>
 
-          <div class="col-md-9">
+          <div id="Content" class="col-md-9 scrollable" data-spy="scroll" data-target=".scrollspy">
             <section id="web-design">
               <h2><span class="fa fa-edit"></span> Web Design</h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
