project1: fixed html and css, working sidebar scroll spy, made global css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/sticky-kit.min.js"></script>
+  <link rel="stylesheet" href="styles/global.css" media="screen" title="no title">
   <link rel="stylesheet" href="styles/main.css" media="screen" title="no title">
 </head>
   <body  data-spy="scroll" data-target=".my-navbar" data-offset="50">
@@ -27,7 +28,6 @@
         </nav>
       </div>
     </div>
-
 
     <div class="content-wrapper" >
       <div class="work-content transition-width" id="worksection">
