--- a/all-projects.html
+++ b/all-projects.html
@@ -10,6 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/sticky-kit.min.js"></script>
   <script src="js/jquery.mixitup.js"></script>
+  <link rel="stylesheet" href="styles/global.css" media="screen" title="no title">
   <link rel="stylesheet" href="styles/all-projects.css" media="screen" title="no title">
 </head>
   <body>
