global working, media queries

--- a/all-projects.html
+++ b/all-projects.html
@@ -17,7 +17,7 @@
     <div class="main">
       <!-- home-landing page area -->
       <div class="main__home-landing container-fluid">
-        <img class="main__home-landing__logo" src="http://placehold.it/100x100" alt="">
+        <img class="main__home-landing__logo" src="images/test-logo.png" alt="">
         <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="120">
           <ul class="nav navbar-nav my-navbar-wrapper__nav ">
             <li class="active my-navbar-wrapper__nav--list"><a href="index.html">home</a></li>
@@ -120,6 +120,10 @@
       <div class="gap"></div>
       <div class="gap"></div>
     </div><!-- end of portfolio-container -->
+
+    <footer>
+      <p class="text-center">&copy 2016 Angela Alarcon</a></p>
+    </footer>
 
     <script>
     $(function() {
