--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- home-landing page area -->
       <div class="main__home-landing container-fluid" >
         <h1 class="main__home-landing__subtitle">design development</h1>
-        <img class="main__home-landing__logo"  id="homesection" src="http://placehold.it/400x400" alt="">
+        <img class="main__home-landing__logo"  id="homesection" src="images/test-logo.png" alt="">
         <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="500">
           <ul class="nav navbar-nav my-navbar-wrapper__nav " id="navbar-target">
             <li class="active my-navbar-wrapper__nav--list"><a href="#homesection">home</a></li>
@@ -140,6 +140,10 @@
       </div>
 
   </div>
+
+  <footer>
+    <p class="text-center">&copy 2016 Angela Alarcon</a></p>
+  </footer>
 
   </body>
   <script>
