--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Angela Alarcon Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
@@ -18,16 +19,35 @@
       <div class="main__home-landing container-fluid" >
         <h1 class="main__home-landing__subtitle">design development</h1>
         <img class="main__home-landing__logo"  id="homesection" src="images/test-logo.png" alt="">
-        <nav class="navbar my-navbar-wrapper responsive-nav" id="js-responsive-nav" data-spy="affix" data-offset-top="500">
-          <ul class="nav navbar-nav my-navbar-wrapper__nav responsive-nav__list" id="navbar-target">
-            <li class="active my-navbar-wrapper__nav--list responsive-nav__item"><a href="#homesection">home</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a class="responsive-nav__link" href="#worksection">work</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a class="responsive-nav__link" href="#aboutsection">about</a></li>
-            <li class="my-navbar-wrapper__nav--list"><a class="responsive-nav__link" href="#contactsection">contact</a></li>
-          </ul>
+        <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="500">
+          <div class="container">
+            <div class="navbar-header">
+              <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> -->
+                <div id="navIcon" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+                <!-- <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> -->
+              <!-- </button> -->
+              <a class="navbar-brand logo my-logo" href="index.html"><img src="images/test-logo.png"></a>
+            </div>  <!-- end of navbar-header -->
+            <div id="navbar" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
+                <li class="active my-navbar-wrapper__nav--list "><a href="#homesection">home</a></li>
+                <li class="my-navbar-wrapper__nav--list"><a  href="#worksection">work</a></li>
+                <li class="my-navbar-wrapper__nav--list"><a  href="#aboutsection">about</a></li>
+                <li class="my-navbar-wrapper__nav--list"><a  href="#contactsection">contact</a></li>
+              </ul>
+            </div>
+          </div>
         </nav>
       </div>
-    </div>
+    </div>  <!-- end of main -->
 
     <div class="content-wrapper" >
       <div class="work-content transition-width" id="worksection">
@@ -173,16 +193,27 @@
           window.location.hash = hash;
         });
       });
+
+      $('#navIcon').click(function(){
+    		$(this).toggleClass('open');
+    	});
+
     });
 
-var responsiveNav = document.getElementById('js-responsive-nav');
-var responsiveNavBreakpoint = 720;
+    // var responsiveNav = document.getElementById('js-responsive-nav');
+    // var responsiveNavBreakpoint = 720;
+    //
+    // responsiveNav.addEventListener('click', function(){
+    //     if(window.innerWidth < responsiveNavBreakpoint){
+    //         responsiveNav.classList.toggle("is-open");
+    //     }
+    // });
 
-responsiveNav.addEventListener('click', function(){
-    if(window.innerWidth < responsiveNavBreakpoint){
-        responsiveNav.classList.toggle("is-open");
-    }
-});
+//     $(document).ready(function(){
+// 	$('#navIcon').click(function(){
+// 		$(this).toggleClass('open');
+// 	});
+// });
 
   </script>
 </html>
