working hamburger nav and mobile landing

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/sticky-kit.min.js"></script>
   <link rel="stylesheet" href="styles/global.css" media="screen" title="no title">
+  <link rel="stylesheet" href="styles/mobile.css" media="screen" title="no title">
   <link rel="stylesheet" href="styles/main.css" media="screen" title="no title">
 </head>
-  <body  data-spy="scroll" data-target=".my-navbar" data-offset="50">
+  <body>
     <div class="main">
       <!-- home-landing page area -->
       <div class="main__home-landing container-fluid" >
@@ -48,6 +49,11 @@
         </nav>
       </div>
     </div>  <!-- end of main -->
+
+    <div class="mobile-landing">
+      <img class="mobile-logo" src="images/test-logo.png" alt="" />
+      <h4>Angela Alarcon</h4>
+    </div>
 
     <div class="content-wrapper" >
       <div class="work-content transition-width" id="worksection">
