--- a/projects/project1.html
+++ b/projects/project1.html
@@ -11,6 +11,7 @@
   <script src="js/sticky-kit.min.js"></script>
   <script src="js/jquery.mixitup.js"></script>
   <link rel="stylesheet" href="../styles/global.css" media="screen" title="no title">
+  <link rel="stylesheet" href="../styles/mobile.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/project.css" media="screen" title="no title">
 </head>
 
@@ -19,14 +20,41 @@
     <!-- home-landing page area -->
     <div class="main__home-landing container-fluid">
       <img class="main__home-landing__logo" src="../images/test-logo.png" alt="">
-      <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="120">
+      <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="500">
+        <div class="container">
+          <div class="navbar-header">
+            <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> -->
+              <div id="navIcon" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <!-- <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span> -->
+            <!-- </button> -->
+            <a class="navbar-brand logo my-logo" href="../index.html"><img src="../images/test-logo.png"></a>
+          </div>  <!-- end of navbar-header -->
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
+              <li class="active my-navbar-wrapper__nav--list "><a href="#homesection">home</a></li>
+              <li class="my-navbar-wrapper__nav--list"><a  href="#worksection">work</a></li>
+              <li class="my-navbar-wrapper__nav--list"><a  href="#aboutsection">about</a></li>
+              <li class="my-navbar-wrapper__nav--list"><a  href="#contactsection">contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- <nav class="navbar my-navbar-wrapper" id="sticky-nav" data-spy="affix" data-offset-top="120">
         <ul class="nav navbar-nav my-navbar-wrapper__nav ">
           <li class="active my-navbar-wrapper__nav--list"><a href="index.html">home</a></li>
           <li class="my-navbar-wrapper__nav--list"><a href="index.html#worksection">work</a></li>
           <li class="my-navbar-wrapper__nav--list"><a href="index.html#aboutsection">about</a></li>
           <li class="my-navbar-wrapper__nav--list"><a href="index.html#contactsection">contact</a></li>
         </ul>
-      </nav>
+      </nav> -->
     </div><!-- end of home-landing -->
   </div><!-- end of main -->
 
