--- a/all-projects.html
+++ b/all-projects.html
@@ -39,10 +39,10 @@
             </div>  <!-- end of navbar-header -->
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
-                <li class="active my-navbar-wrapper__nav--list "><a href="#homesection">home</a></li>
-                <li class="my-navbar-wrapper__nav--list"><a  href="#worksection">work</a></li>
-                <li class="my-navbar-wrapper__nav--list"><a  href="#aboutsection">about</a></li>
-                <li class="my-navbar-wrapper__nav--list"><a  href="#contactsection">contact</a></li>
+                <li class="active my-navbar-wrapper__nav--list "><a href="index.html#homesection">home</a></li>
+                <li class="my-navbar-wrapper__nav--list"><a  href="index.html#worksection">work</a></li>
+                <li class="my-navbar-wrapper__nav--list"><a  href="index.html#aboutsection">about</a></li>
+                <li class="my-navbar-wrapper__nav--list"><a  href="index.html#contactsection">contact</a></li>
               </ul>
             </div>
           </div>
