--- a/projects/project1.html
+++ b/projects/project1.html
@@ -39,10 +39,10 @@
           </div>  <!-- end of navbar-header -->
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
-              <li class="active my-navbar-wrapper__nav--list "><a href="#homesection">home</a></li>
-              <li class="my-navbar-wrapper__nav--list"><a  href="#worksection">work</a></li>
-              <li class="my-navbar-wrapper__nav--list"><a  href="#aboutsection">about</a></li>
-              <li class="my-navbar-wrapper__nav--list"><a  href="#contactsection">contact</a></li>
+              <li class="active my-navbar-wrapper__nav--list "><a href="../index.html#homesection">home</a></li>
+              <li class="my-navbar-wrapper__nav--list"><a  href="../index.html#worksection">work</a></li>
+              <li class="my-navbar-wrapper__nav--list"><a  href="../index.html#aboutsection">about</a></li>
+              <li class="my-navbar-wrapper__nav--list"><a  href="../index.html#contactsection">contact</a></li>
             </ul>
           </div>
         </div>
@@ -62,8 +62,8 @@
   <div class="project-hero"></div>
   <!-- end of project-hero -->
 
-  <div class="container">
-    <div class="row">
+    <div class="content-area row">
+
         <div class=" col-md-3 scrollspy">
           <!-- <h5>Table of Contents</h5> -->
           <ul id="nav" class="side-links nav hidden-xs hidden-sm" data-spy="affix">
@@ -230,7 +230,10 @@
       </div>
 
     </div><!--end of .row-->
-  </div><!--end of .container-->
+    <!-- <div class="container">
+
+  </div> -->
+  <!--end of .container-->
 
   <section class="application">
     <div class="container">
