starting to populate the site with content and styles

--- a/all-projects.html
+++ b/all-projects.html
@@ -11,9 +11,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/sticky-kit.min.js"></script>
   <script src="js/jquery.mixitup.js"></script>
-  <link rel="stylesheet" href="styles/global.css" media="screen" title="no title">
-  <link rel="stylesheet" href="styles/mobile.css" media="screen" title="no title">
-  <link rel="stylesheet" href="styles/all-projects.css" media="screen" title="no title">
+  <link rel="stylesheet" href="styles/css/global.css" media="screen" title="no title">
+  <link rel="stylesheet" href="styles/css/mobile.css" media="screen" title="no title">
+  <link rel="stylesheet" href="styles/css/all-projects.css" media="screen" title="no title">
 </head>
   <body>
     <div class="main">
