--- a/index.html
+++ b/index.html
@@ -10,36 +10,30 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/sticky-kit.min.js"></script>
-  <link rel="stylesheet" href="styles/global.css" media="screen" title="no title">
-  <link rel="stylesheet" href="styles/mobile.css" media="screen" title="no title">
-  <link rel="stylesheet" href="styles/main.css" media="screen" title="no title">
+  <link rel="stylesheet" href="styles/css/global.css" media="screen" title="no title">
+  <link rel="stylesheet" href="styles/css/mobile.css" media="screen" title="no title">
+  <link rel="stylesheet" href="styles/css/main.css" media="screen" title="no title">
 </head>
   <body>
     <div class="main">
       <!-- home-landing page area -->
       <div class="main__home-landing container-fluid" >
-        <h1 class="main__home-landing__subtitle">design development</h1>
-        <img class="main__home-landing__logo"  id="homesection" src="images/test-logo.png" alt="">
-        <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="500">
+        <img class="main__home-landing__subtitle" src="images/subtitle.png">
+        <img class="main__home-landing__logo"  id="homesection" src="images/main-logo.png" alt="">
+        <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="304">
           <div class="container">
             <div class="navbar-header">
-              <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> -->
                 <div id="navIcon" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                   <span></span>
                   <span></span>
                   <span></span>
                   <span></span>
                 </div>
-                <!-- <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span> -->
-              <!-- </button> -->
               <a class="navbar-brand logo my-logo" href="index.html"><img src="images/test-logo.png"></a>
             </div>  <!-- end of navbar-header -->
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
-                <li class="active my-navbar-wrapper__nav--list "><a href="#homesection">home</a></li>
+                <li class="active my-navbar-wrapper__nav--list "><a class="link-style" href="#homesection">home</a></li>
                 <li class="my-navbar-wrapper__nav--list"><a  href="#worksection">work</a></li>
                 <li class="my-navbar-wrapper__nav--list"><a  href="#aboutsection">about</a></li>
                 <li class="my-navbar-wrapper__nav--list"><a  href="#contactsection">contact</a></li>
@@ -51,7 +45,7 @@
     </div>  <!-- end of main -->
 
     <div class="mobile-landing">
-      <img class="mobile-logo" src="images/test-logo.png" alt="" />
+      <img class="mobile-logo" src="images/logo.png" alt="" />
       <h4>Angela Alarcon</h4>
     </div>
 
