--- a/projects/project1.html
+++ b/projects/project1.html
@@ -10,9 +10,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/sticky-kit.min.js"></script>
   <script src="js/jquery.mixitup.js"></script>
-  <link rel="stylesheet" href="../styles/global.css" media="screen" title="no title">
-  <link rel="stylesheet" href="../styles/mobile.css" media="screen" title="no title">
-  <link rel="stylesheet" href="../styles/project.css" media="screen" title="no title">
+  <link rel="stylesheet" href="../styles/css/global.css" media="screen" title="no title">
+  <link rel="stylesheet" href="../styles/css/mobile.css" media="screen" title="no title">
+  <link rel="stylesheet" href="../styles/css/project.css" media="screen" title="no title">
 </head>
 
 <body data-spy="scroll" data-target=".scrollspy">
