update of the last commit

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <span></span>
                   <span></span>
                 </div>
-              <a class="navbar-brand logo my-logo" href="index.html"><img src="images/test-logo.png"></a>
+              <a class="navbar-brand logo my-logo" href="index.html"><img src="images/mini-logo.png"></a>
             </div>  <!-- end of navbar-header -->
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
@@ -45,8 +45,7 @@
     </div>  <!-- end of main -->
 
     <div class="mobile-landing">
-      <img class="mobile-logo" src="images/logo.png" alt="" />
-      <h4>Angela Alarcon</h4>
+      <img class="mobile-logo" src="images/main-logo.png" alt="" />
     </div>
 
     <div class="content-wrapper" >
@@ -116,7 +115,7 @@
         </div>
         <div class="about-section-content">
           <div class="about-text-wrapper">
-            <h1>about me</h1>
+            <h1>Hi there.</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare. Morbi suscipit, nunc eget sollicitudin sollicitudin, magna dui finibus purus, sed commodo enim ipsum non felis. Aliquam sed sapien metus. Pellentesque id felis eu lorem egestas posuere. Duis ultricies, tellus vel egestas cursus, orci odio sagittis libero, sed dignissim mi elit eu enim. Donec porttitor nibh ligula, eu placerat lacus accumsan at. Proin posuere eros massa, nec volutpat nisi scelerisque vulputate.
             </p>
@@ -125,9 +124,6 @@
             </p>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare. Morbi suscipit, nunc eget sollicitudin sollicitudin, magna dui finibus purus, sed commodo enim ipsum non felis. Aliquam sed sapien metus. Pellentesque id felis eu lorem egestas posuere. Duis ultricies, tellus vel egestas cursus, orci odio sagittis libero, sed dignissim mi elit eu enim. Donec porttitor nibh ligula, eu placerat lacus accumsan at. Proin posuere eros massa, nec volutpat nisi scelerisque vulputate.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare.
             </p>
           </div>
         </div>
@@ -143,7 +139,7 @@
         </div>
         <div class="contact-section-content">
           <div class="contact-text-wrapper">
-            <h1>contact</h1>
+            <h1>Let's work together.</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget finibus neque. Praesent nec placerat diam. Cras eget ligula aliquet enim molestie pellentesque. Cras condimentum aliquam diam nec ornare. Morbi suscipit, nunc eget sollicitudin sollicitudin, magna dui finibus purus, sed commodo enim ipsum non felis. Aliquam sed sapien metus. Pellentesque id felis eu lorem egestas posuere. Duis ultricies, tellus vel egestas cursus, orci odio sagittis libero, sed dignissim mi elit eu enim. Donec porttitor nibh ligula, eu placerat lacus accumsan at. Proin posuere eros massa, nec volutpat nisi scelerisque vulputate.
             </p>
@@ -155,7 +151,7 @@
       <!-- thank you -->
       <div class="ty-section">
         <div class="section-title">
-          <span>Thank You!</span>
+          <span><h3>Thank You!</h3></span>
         </div>
       </div>
 
