--- a/all-projects.html
+++ b/all-projects.html
@@ -19,8 +19,8 @@
     <div class="main">
       <!-- home-landing page area -->
       <div class="main__home-landing container-fluid">
-        <img class="main__home-landing__logo" src="images/test-logo.png" alt="">
-        <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="500">
+        <img class="main__home-landing__logo" src="images/main-logo.png" alt="">
+        <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="120">
           <div class="container">
             <div class="navbar-header">
               <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> -->
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span> -->
               <!-- </button> -->
-              <a class="navbar-brand logo my-logo" href="index.html"><img src="images/test-logo.png"></a>
+              <a class="navbar-brand logo my-logo" href="index.html"><img src="images/mini-logo.png"></a>
             </div>  <!-- end of navbar-header -->
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
@@ -59,7 +59,7 @@
     </div><!-- end of main -->
 
     <div class="mobile-landing">
-      <img class="mobile-logo" src="images/test-logo.png" alt="" />
+      <img class="mobile-logo" src="images/main-logo.png" alt="" />
       <h4>Angela Alarcon</h4>
     </div>
 
@@ -84,47 +84,47 @@
           <a  class="see-project" href="projects/project1.html">
             <div class="color-box"></div>
             <div class="text-box">
-              <p>see project</p>
+              <p>Curran</p>
             </div>
           </a>
         </div>
       </div>
-      <div class="mix category-ill project-box">
+      <div class="mix category-web project-box">
         <div class="project-image project-image2">
           <a  class="see-project" href="#">
             <div class="color-box"></div>
             <div class="text-box">
-              <p>see project</p>
+              <p>SF Travel</p>
             </div>
           </a>
         </div>
       </div>
-      <div class="mix category-pho project-box">
+      <div class="mix category-web project-box">
         <div class="project-image project-image3">
           <a  class="see-project" href="#">
             <div class="color-box"></div>
             <div class="text-box">
-              <p>see project</p>
+              <p>Among Strangers</p>
             </div>
           </a>
         </div>
       </div>
-      <div class="mix category-web project-box">
+      <div class="mix category-des project-box">
         <div class="project-image project-image1">
           <a  class="see-project" href="#">
             <div class="color-box"></div>
             <div class="text-box">
-              <p>see project</p>
+              <p>High Spirits</p>
             </div>
           </a>
         </div>
       </div>
-      <div class="mix category-web project-box">
+      <div class="mix category-des project-box">
         <div class="project-image project-image2">
           <a  class="see-project" href="#">
             <div class="color-box"></div>
             <div class="text-box">
-              <p>see project</p>
+              <p>Parkarma</p>
             </div>
           </a>
         </div>
@@ -134,7 +134,7 @@
           <a  class="see-project" href="#">
             <div class="color-box"></div>
             <div class="text-box">
-              <p>see project</p>
+              <p>Lunchbox</p>
             </div>
           </a>
         </div>
@@ -144,7 +144,7 @@
           <a  class="see-project" href="#">
             <div class="color-box"></div>
             <div class="text-box">
-              <p>see project</p>
+              <p>SK8</p>
             </div>
           </a>
         </div>
