updated styles and populated project page

--- a/projects/project1.html
+++ b/projects/project1.html
@@ -19,8 +19,8 @@
   <div class="main">
     <!-- home-landing page area -->
     <div class="main__home-landing container-fluid">
-      <img class="main__home-landing__logo" src="../images/test-logo.png" alt="">
-      <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="500">
+      <img class="main__home-landing__logo" src="../images/main-logo.png" alt="">
+      <nav class="navbar my-navbar-wrapper" data-spy="affix" data-offset-top="120">
         <div class="container">
           <div class="navbar-header">
             <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> -->
@@ -59,7 +59,10 @@
   </div><!-- end of main -->
 
   <!-- project-hero -->
-  <div class="project-hero"></div>
+  <div class="project-hero">
+    <div class="color-box"></div>
+    <img class="hero-logo" src="../images/curran-logo.png">
+  </div>
   <!-- end of project-hero -->
 
     <div class="content-area row">
@@ -67,7 +70,7 @@
         <div class=" col-md-3 scrollspy">
           <!-- <h5>Table of Contents</h5> -->
           <ul id="nav" class="side-links nav hidden-xs hidden-sm" data-spy="affix">
-            <li><a href="#"><h4>Table of Contents</h4></a></li>
+            <li><a href="#"><p>Table of Contents</p></a></li>
             <li><a href="#web-design">Web Design</a></li>
             <li><a href="#web-development">Web Development</a>
               <ul class="nav side-links">
