populating among strangers project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </a>
           </div>
           <div class="work-item3">
-            <a  class="see-project" href="projects/project3.html">
+            <a  class="see-project" href="projects/among-strangers.html">
               <div class="color-box"></div>
               <div class="text-box">
                 <h4>project title</h4>
