--- a/projects/project1.html
+++ b/projects/project1.html
@@ -35,7 +35,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span> -->
             <!-- </button> -->
-            <a class="navbar-brand logo my-logo" href="../index.html"><img src="../images/test-logo.png"></a>
+            <a class="navbar-brand logo my-logo" href="../index.html"><img src="../images/mini-logo.png"></a>
           </div>  <!-- end of navbar-header -->
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav my-navbar-wrapper__nav" id="navbar-target">
