update on among-strangers.html, more content added

--- a/projects/among-strangers.html
+++ b/projects/among-strangers.html
@@ -8,10 +8,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-  <script src="js/sticky-kit.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script> -->
+  <script src="../js/sticky-kit.min.js"></script>
+  <script src="../js/lity.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/> -->
+  <!-- <link rel="stylesheet" href="..styles/css/lightbox.css" media="screen" title="no title"> -->
+  <link rel="stylesheet" href="../styles//css/lity.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/global.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/mobile.css" media="screen" title="no title">
   <link rel="stylesheet" href="../styles/css/project.css" media="screen" title="no title">
@@ -197,46 +200,69 @@
               </div>
             </section><!--end of #inspiration-->
             <section id="process">
-              <div class="pad-box">
                 <h3>Process</h3>
-                <!-- <img src="../images/process.jpg" alt="" /> -->
-                <!-- <div class="slide-wrapper"> -->
-                  <div class="responsive">
-                    <img class="process1" src="../images/process1.jpg">
-                    <img class="process2" src="../images/process2.jpg">
-                    <img class="process3" src="../images/process3.jpg">
-                    <img class="process4" src="../images/process4.jpg">
-                  </div>
-                <!-- </div> -->
-                <!-- <div class="mini-slide-wrap">
-                  <div class="slider-nav">
-                    <img class="process1" src="../images/process1.jpg">
-                    <img class="process2" src="../images/process2.jpg">
-                    <img class="process3" src="../images/process3.jpg">
-                    <img class="process4" src="../images/process4.jpg">
-                  </div>
-                </div> -->
-              </div>
+                <div class="img-wrapper">
+                  <a href="../images/process1.jpg" data-lity ><img src="../images/process1.jpg" alt="" /></a>
+                  <a href="../images/process2.jpg" data-lity ><img src="../images/process2.jpg" alt="" /></a>
+                  <a href="../images/process3.jpg" data-lity ><img src="../images/process3.jpg" alt="" /></a>
+                  <a href="../images/process4.jpg" data-lity ><img src="../images/process4.jpg" alt="" /></a>
+                </div>
+                <p>
+                  Initial rough sketches of logo ideas. (Click on the image to view)
+                </p>
             </section><!--end of #process-->
-            <section id="initial-design">
-              <h3>PHP</h3>
-              <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-                Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-                luctus pulvinar, hendrerit id, lorem.
+            <section id="initial-designs">
+              <h3>Initial Designs</h3>
+              <div class="img-wrapper">
+                <a href="../images/initial1.png" data-lity ><img class="img-long" src="../images/initial1.png" alt="" /></a><br>
+                <a href="../images/initial2.png" data-lity ><img class="img-long" src="../images/initial2.png" alt="" /></a><br>
+                <a href="../images/initial3.png" data-lity ><img class="img-sq" src="../images/initial3.png" alt="" /></a>
+                <a href="../images/initial4.png" data-lity ><img class="img-sq" src="../images/initial4.png" alt="" /></a><br>
+                <a href="../images/initial5.png" data-lity ><img class="img-sq" src="../images/initial5.png" alt="" /></a>
+                <a href="../images/initial6.png" data-lity ><img class="img-sq" src="../images/initial6.png" alt="" /></a>
+                <a href="../images/initial7.png" data-lity ><img class="img-sq" src="../images/initial7.png" alt="" /></a>
+                <a href="../images/initial8.png" data-lity ><img class="img-sq" src="../images/initial8.png" alt="" /></a>
+              </div>
+              <p>
+                First iterations of logo lockups using both moon logomark and eye logomark with type.
+              </p>
+              <p>
+                (Click on the image to view)
               </p>
             </section><!--end of #initial-design-->
             <section id="final-logo-bg">
-              <h3>PHP</h3>
-              <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-                Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-                luctus pulvinar, hendrerit id, lorem.
-              </p>
-            </section><!--end of #final-logo-bg-->
+              <h3>Final Logo</h3>
+              <img src="" alt="" />
+            </section><!--end of #finallockup-0g-->
             <section id="logo-lockups">
-              <h3>PHP</h3>
-              <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-                Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-                luctus pulvinar, hendrerit id, lorem.
+              <h3>Logo Lockups</h3>
+              <div class="img-wrapper">
+                <a href="../images/lockup-01.png" data-lity ><img class="img-sq" src="../images/lockup-01.png" alt="" /></a>
+                <a href="../images/lockup-02.png" data-lity ><img class="img-sq" src="../images/lockup-02.png" alt="" /></a>
+              </div>
+              <p>
+                Vertical logo lockup with both type and mark
+              </p>
+              <div class="img-wrapper">
+                <a href="../images/lockup-03.png" data-lity ><img class="img-sq" src="../images/lockup-03.png" alt="" /></a>
+                <a href="../images/lockup-04.png" data-lity ><img class="img-sq" src="../images/lockup-04.png" alt="" /></a>
+              </div>
+              <p>
+                Bare logomark
+              </p>
+              <div class="img-wrapper">
+                <a href="../images/lockup-05.png" data-lity ><img class="img-long" src="../images/lockup-05.png" alt="" /></a>
+                <a href="../images/lockup-06.png" data-lity ><img class="img-long" src="../images/lockup-06.png" alt="" /></a>
+              </div>
+              <p>
+                Horizontal logo lockup with type
+              </p>
+              <div class="img-wrapper">
+                <a href="../images/lockup-07.png" data-lity ><img class="img-long" src="../images/lockup-07.png" alt="" /></a>
+                <a href="../images/lockup-08.png" data-lity ><img class="img-long" src="../images/lockup-08.png" alt="" /></a>
+              </div>
+              <p>
+                Horizontal lockup with both type and mark
               </p>
             </section><!--end of #logo-lockups-->
             <section id="type-color">
@@ -339,6 +365,9 @@
     <p class="text-center">&copy 2016 Angela Alarcon</a></p>
   </footer>
 
+
+  <!-- <script src="../js/lightbox.js"></script> -->
+
   <script>
   $(document).ready(function(){
     $('#nav').affix({
@@ -347,56 +376,8 @@
         bottom: ($('footer').outerHeight(true) + $('.application').outerHeight(true)) + 40
       }
     });
-    $('.responsive').slick({
-        infinite: false,
-        speed: 300,
-        slidesToShow: 4,
-        slidesToScroll: 4,
-        responsive: [
-          {
-            breakpoint: 1024,
-            settings: {
-              slidesToShow: 3,
-              slidesToScroll: 3,
-              infinite: true,
-              dots: true
-            }
-          },
-          {
-            breakpoint: 600,
-            settings: {
-              slidesToShow: 2,
-              slidesToScroll: 2
-            }
-          },
-          {
-            breakpoint: 480,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1
-            }
-          }
-          // You can unslick at a given breakpoint now by adding:
-          // settings: "unslick"
-          // instead of a settings object
-        ]
-      });
-    // $('.slider-for').slick({
-    //   //  autoplay: true,
-    //    slidesToShow: 1,
-    //    slidesToScroll: 1,
-    //    arrows: false,
-    //    fade: true,
-    //    asNavFor: '.slider-nav'
-    // });
-    // $('.slider-nav').slick({
-    //    slidesToShow: 4,
-    //    arrows: false,
-    //    slidesToScroll: 1,
-    //    asNavFor: '.slider-for',
-    //    centerMode: true,
-    //    focusOnSelect: true
-    // });
+
+
 
   });
 
