done populating amongstrangers project except for video and mockups

--- a/projects/among-strangers.html
+++ b/projects/among-strangers.html
@@ -73,8 +73,8 @@
                 <li><a href="#initial-designs"><span class="fa fa-angle-double-right"></span>Initial Designs</a></li>
                 <li><a href="#final-logo-bg"><span class="fa fa-angle-double-right"></span>Final Logo</a></li>
                 <li><a href="#logo-lockups"><span class="fa fa-angle-double-right"></span>Logo Lockups</a></li>
-                <li><a href="#type-color"><span class="fa fa-angle-double-right"></span>Typo & Color</a></li>
-                <li><a href="#mockups"><span class="fa fa-angle-double-right"></span>Mockup</a></li>
+                <li><a href="#type-color"><span class="fa fa-angle-double-right"></span>Type & Color</a></li>
+                <li><a href="#mockups"><span class="fa fa-angle-double-right"></span>Identity Mockups</a></li>
               </ul>
             </li>
             <li><a href="#web-design">Web Design Research</a>
@@ -264,67 +264,109 @@
               <p>
                 Horizontal lockup with both type and mark
               </p>
+              <p>
+                (Click on the image to view)
+              </p>
             </section><!--end of #logo-lockups-->
             <section id="type-color">
-              <h3>type color</h3>
-              <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-                Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-                luctus pulvinar, hendrerit id, lorem.
-              </p>
+              <h3>Typography & Color</h3>
+              <img src="../images/type-color.png" alt="" />
             </section><!--end of #type-color-->
             <section id="mockups">
-              <h3>type color</h3>
-              <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-                Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-                luctus pulvinar, hendrerit id, lorem.
-              </p>
+              <h3>Identity Mockups</h3>
+              <div class="img-wrapper">
+                <a href="../images/mockup-card.jpg" data-lity ><img src="../images/mockup-card.jpg" alt="" /></a>
+                <a href="../images/mockup-label.jpg" data-lity ><img src="../images/mockup-label.jpg" alt="" /></a>
+                <a href="../images/mockup-bag.jpg" data-lity ><img src="../images/mockup-bag.jpg" alt="" /></a>
+                <a href="../images/mockup-box.jpg" data-lity ><img src="../images/mockup-box.jpg" alt="" /></a>
+                <p>
+                  (L-R) Business Cards, Lable Tag, Muslin Bag, Jewelery Box
+                </p>
+                <p>
+                  (Click on the image to view)
+                </p>
+              </div>
             </section><!--end of #mockups-->
           </div>
         </section><!--end of #branding-research-->
 
         <section id="web-design">
-          <h2><span class="fa fa-edit"></span> Graphic Design</h2>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-            massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-            quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-            Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-          </p>
-          <section id="evolution">
-            <h3>Ruby</h3>
-            <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-              Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-              luctus pulvinar, hendrerit id, lorem.
-            </p>
-          </section><!--end of #evolution -->
-          <section id="inspiration2">
-            <h3>Python</h3>
-            <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-              Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-              luctus pulvinar, hendrerit id, lorem.
-            </p>
-          </section>
-          <!--end of #inspiration-->
-          <section id="ia">
-            <h3>PHP</h3>
-            <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-              Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-              luctus pulvinar, hendrerit id, lorem.
-            </p>
-          </section><!--end of #ia-->
-          <section id="wireframes">
-            <h3>PHP</h3>
-            <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-              Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-              luctus pulvinar, hendrerit id, lorem.
-            </p>
-          </section><!--end of #wireframes-->
-          <section id="high-fid">
-            <h3>PHP</h3>
-            <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-              Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Nam quam nunc, blandit vel,
-              luctus pulvinar, hendrerit id, lorem.
-            </p>
-          </section><!--end of #high-fid-->
+          <div class="pad-box">
+            <h2>Web Design Research</h2>
+            <section id="evolution">
+              <h3>Evolution</h3>
+              <div class="img-wrapper">
+                <p>
+                  The brand was intended to be an all-around e-commerce website selling vintage clothes, jewelery and antiquated items which came with an online magazine collateral.
+                </p>
+                <a href="../images/evo-1-1.png" data-lity ><img src="../images/evo-1-1.png" alt="" /></a>
+                <a href="../images/evo-1-2.png" data-lity ><img src="../images/evo-1-2.png" alt="" /></a>
+                <a href="../images/evo-1-3.png" data-lity ><img src="../images/evo-1-3.png" alt="" /></a>
+                <p>
+                  (Click on the image to view)
+                </p>
+              </div>
+              <div class="img-wrapper">
+                <p>
+                  The second iteration took inspiration from Pamela Love's first website. It's a more creative take on the first iteration and was not coded at all.
+                </p>
+                <a href="../images/evo-2-1.jpg" data-lity ><img src="../images/evo-2-1.jpg" alt="" /></a>
+                <a href="../images/evo-2-2.jpg" data-lity ><img src="../images/evo-2-2.jpg" alt="" /></a>
+                <a href="../images/evo-2-3.jpg" data-lity ><img src="../images/evo-2-3.jpg" alt="" /></a>
+                <p>
+                  (Click on the image to view)
+                </p>
+              </div><div class="img-wrapper">
+                <p>
+                  The third iteration was the version that was actually launched and used as the online store until recently.
+                </p>
+                <a href="../images/evo-3-1.png" data-lity ><img src="../images/evo-3-1.png" alt="" /></a>
+                <a href="../images/evo-3-2.png" data-lity ><img src="../images/evo-3-2.png" alt="" /></a>
+                <a href="../images/evo-3-3.png" data-lity ><img src="../images/evo-3-3.png" alt="" /></a>
+                <p>
+                  (Click on the image to view)
+                </p>
+              </div>
+            </section><!--end of #evolution -->
+            <section id="inspiration2">
+              <h3>Inspiration</h3>
+              <div class="img-wrapper">
+                <p>
+                  Pamela Love’s website, built with Shopify, is beautiful and elegant. 	There’s a lot going on, because she’s built an empire beyond jewelry, but there are many things to take away from it. I love the color palette she used, and her clean product shots. My favorite part of her website is her use of the diamond shape consistently.
+                </p>
+                <p>
+                  I love the simplicity and straightforwardness of Bona Drag’s site. There’s barely any frills and its purpose as an e-commerce site is very transparent. While Pamela Love’s website allows you to look into many aspects of her life and her products, this site mainly operates as a shop.
+                </p>
+                <a href="../images/web-pam.jpg" data-lity ><img src="../images/web-pam.jpg" alt="" /></a>
+                <a href="../images/web-bona.jpg" data-lity ><img src="../images/web-bona.jpg" alt="" /></a>
+                <p>
+                  (Click on the image to view)
+                </p>
+              </div>
+
+            </section>
+            <!--end of #inspiration-->
+            <section id="ia">
+              <h3>Information Architecture</h3>
+              <div class="img-wrapper">
+                <a href="../images/ia.png" data-lity ><img src="../images/ia.png" alt="" /></a>
+              </div>
+            </section><!--end of #ia-->
+            <section id="wireframes">
+              <h3>Wireframes</h3>
+              <div class="img-wrapper">
+                <a href="../images/wireframe1.jpg" data-lity ><img src="../images/wireframe1.jpg" alt="" /></a>
+                <a href="../images/wireframe2.jpg" data-lity ><img src="../images/wireframe2.jpg" alt="" /></a>
+                <a href="../images/wireframe3.jpg" data-lity ><img src="../images/wireframe3.jpg" alt="" /></a>
+              </div>
+            </section><!--end of #wireframes-->
+            <section id="high-fid">
+              <h3>Mockups</h3>
+              <div class="img-wrapper">
+                <img src="" alt="" />
+              </div>
+            </section><!--end of #high-fid-->
+          </div>
         </section><!--end of #web-design-->
 
       </div>
